# ROS2

./: README.md  ros2_not_duzenli.txt  ros2_notlar.txt
ros2_ws/: ros2_not_duzenli.txt  ros2_notlar.txt
ros2_ws/src/simple_interfaces_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/simple_py_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/simple_py_pkg/simple_py_pkg/: add_two_ints_client.py  add_two_ints_client_oop.py  add_two_ints_server.py  components_status_publisher.py  counter_node.py  multiply_two_ints_client.py  multiply_two_ints_server.py  remote_controller.py  simple_py_node.py  televison.py  template_node.py
turtlesim_ws/src/turtlesim_interfaces/: CMakeLists.txt  package.xml
turtlesim_ws/src/turtlesim_py_pkg/: package.xml  setup.py
turtlesim_ws/src/turtlesim_py_pkg/turtlesim_py_pkg/: go_to_loc.py  spawn_turtle.py  vel_controller.py
